# AI-Companion

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/cpp/src/: llama_jni.cpp  tts_jni.cpp  whisper_jni.cpp
app/src/main/java/com/ai/companion/core/: AiCompanionApp.kt
app/src/main/java/com/ai/companion/core/audio/: STTEngine.kt  TTSEngine.kt
app/src/main/java/com/ai/companion/core/avatar/: Avatar3DEngine.kt
app/src/main/java/com/ai/companion/core/emotion/: EmotionEngine.kt
app/src/main/java/com/ai/companion/core/llm/: LocalLLMEngine.kt  ModelManager.kt
app/src/main/java/com/ai/companion/core/memory/: MemoryEngine.kt
app/src/main/java/com/ai/companion/service/: CompanionService.kt  FineTuneService.kt
app/src/main/java/com/ai/companion/ui/: MainActivity.kt
app/src/main/java/com/ai/companion/ui/screens/: MainScreen.kt  ModelManagerScreen.kt
app/src/main/java/com/ai/companion/ui/theme/: Theme.kt
app/src/main/java/com/ai/companion/ui/viewmodel/: ChatViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
scripts/: build_native.sh
